# Board_Game_DuckQuest

./: .gitignore  MANIFEST.in  README.md  install.py  pytest.ini  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: format-check.yml  tests.yml
docs/: README_PYPI.md  architecture.md  index.md  logging.md  tests.md
docs/website/: index.html
docs/website/assets/styles/: main.css
docs/website/assets/styles/base/: base.css  footer.css  header.css
docs/website/assets/styles/components/: buttons.css
docs/website/assets/styles/screens/: home.css
docs/website/pages/: about.html  contact.html  download.html  game.html  how-it-works.html
duckquest/: game_manager.py  main.py
duckquest/audio/: manager.py
duckquest/data/: rules.json
duckquest/graph/: logic.py  manager.py  renderer.py  ui.py
duckquest/hardware/: button_manager.py  led_strip_manager.py  mock.py
duckquest/utils/: helpers.py  logger.py
scripts/: button_checker.py  hardware_checker.py  led_strip_checker.py  run_tests.ps1
src/: audio_manager.py  button_manager.py  game_manager.py  graph_logic.py  graph_manager.py  graph_ui.py  interaction.py  main.py  mock_hardware.py  my_graph.py
tests/: button_checker.py  buzzer_checker.py  conftest.py  get_graph_info.py  graph_info.py  launch_game.py  launch_ui.py  led_strip_checker.py  raspberry_pi_checker.py  test_graph_logic.py  test_graph_manager.py
tests/manual/: test_launch_ui.py
