[metadata]
name = duckquest
version = 0.5.0dev1
author = Léo Leman
author_email = leo.leman555@gmail.com
description = An educational game on the Raspberry Pi that teaches children about graph algorithms — DuckQuest prototype
long_description = file: docs/README_PYPI.md
long_description_content_type = text/markdown
url = https://github.com/LeoLeman555/Board_Game_DuckQuest
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Games/Entertainment

[options]
packages = find:
include_package_data = True
python_requires = >=3.11
install_requires =
    contourpy ~= 1.3
    cycler ~= 0.12
    fonttools ~= 4.55
    kiwisolver ~= 1.4
    matplotlib ~= 3.10
    networkx ~= 3.4
    numpy ~= 2.2
    packaging ~= 24.2
    pillow ~= 11.0
    psutil ~= 6.1
    pygame ~= 2.6
    pyparsing ~= 3.2
    python-dateutil ~= 2.9
    six ~= 1.17
    RPi.GPIO ~= 0.7.1 ; platform_machine == "armv7l"
    rpi_ws281x ~= 5.0.0 ; platform_machine == "armv7l"

[options.package_data]
duckquest =
    audio/*.*
    graph/*.*
    hardware/*.*
    utils/*.*

[options.entry_points]
console_scripts =
    duck-quest = duckquest.main:main

[tool:pytest]
testpaths = tests
